--- a/css/style2.css
+++ b/css/style2.css
@@ -144,7 +144,7 @@ nav>.k1{
 
     }
 
-    #relative{width: 100%; height: 700px; margin:0 auto; background-color: aqua;}
+    #relative{width: 100%; height: 700px; margin:0 auto;}
 
 #relative > div {float: left; margin-left:60px;}
 
@@ -191,8 +191,8 @@ nav>.k1{
 
 
 
-    .em1{width:252px; height:28px; display:flex; text-align:center; background-color: #5c5d5f;}
-    .em{width:120px; height:30px; display:flex; text-align:center; margin-right: 20px ;}
+    .em1{width:252px; height:28px; display:flex; text-align:center; background-color: #ffffff;}
+    .em{width:120px; height:30px; display:flex; text-align:center; margin-right: 20px ; background-color: #ffffff;}
 
 #Grey{width:1205px;height:500px;  margin:15px auto 0; ;}
 .Grey2{width:25%; float:left;}
