--- a/css/style2.css
+++ b/css/style2.css
@@ -33,6 +33,7 @@ nav>.k1{
     .item3 {width:50%; float:left;}
     .item:nth-of-type(2){margin-top:10px;}
 
+    .div>.item4>img { white-space:2px; }
     
     .container{
     width:1600px;
@@ -179,6 +180,7 @@ nav>.k1{
     height:25px;
     position: relative; top:-141PX; right:12px;  
     border: 1px solid #5c5d5f;
+    float:right 20px;
     }
     
     
@@ -189,8 +191,8 @@ nav>.k1{
 
 
 
-    .em1{width:252px; height:28px; display:flex; text-align:center; background-color: #ffffff;}
-    .em{width:120px; height:30px; display:flex; text-align:center; margin-right: 20px ; background-color: #ffffff;}
+    .em1{width:252px; height:28px; display:flex; text-align:center; background-color: #5c5d5f;}
+    .em{width:120px; height:30px; display:flex; text-align:center; margin-right: 20px ;}
 
 #Grey{width:1205px;height:500px;  margin:15px auto 0; ;}
 .Grey2{width:25%; float:left;}
