--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,11 @@ nav {
   width:1205px;
   height:100%;
   margin:0 auto;
+  margin-right:px;
+  
  }
-
-nav> ul >li {display: inline-block; padding:1em 2em; position:relative;}
+nav>ul{margin-left:50px;}
+nav> ul >li {display: inline-block; padding:1em 2em; position:relative; margin-right: 50px; margin-left:15.2px;}
 ul li:hover {background: #666;}
 nav>ul>li:hover {background:gold (248, 246, 246);}
 nav>ul>li:hover ul {display: block;}
